Description updated, nav feature

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import ProfileCheck from '../components/icons/ProfileCheck.astro';
 
 <Layout 
 	title="Oscar Romero's Portfolio - Software Developer"
-	description="Software Developer with experience in creating web applications and custom software. I am passionate about building efficient and functional solutions, always prioritizing user experience and security."
+	description="Software Developer from Puerto Rico, focused on building efficient and functional solutions, always prioritizing user experience and security."
 >
 	<main class="px-4">
 		<SectionContainer class="py-16 md:py-36">
