--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,6 @@
 ---
+import ThemeToggle from "./ThemeToggle.astro"
+
 const navItems = [
   {
     title: "Home",
@@ -40,6 +42,7 @@ const navItems = [
         </a>
       ))
     }
+    <ThemeToggle />
   </nav>
 </header>
 
