--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,13 +6,13 @@ const EXPERIENCE = [
         date: 'March 2024 - April 2024',
         title: 'Front-End Developer Intern',
         company: 'Involve LLC',
-        description: 'I implemented front-end changes on Laravel projects, collaborated on feature integration, and attended meetings with project managers to discuss requirements.'
+        description: 'Worked on front-end updates and feature integration for Laravel projects, and met with project managers to clarify requirements.'
     },
     {
         date: 'August 2024',
         title: 'Google Cybersecurity Certificate',
         company: 'Coursera',
-        description: 'I have earned the Google Cybersecurity Certificate and have experience with Linux, SQL, SIEM tools, and IDS. I can also identify and mitigate common cybersecurity risks, threats, and vulnerabilities.'
+        description: 'I have obtained experience with Linux, SIEM tools, IDS, and skills in identifying and mitigating cybersecurity risks, threats, and vulnerabilities.'
     },
     
     {
@@ -30,4 +30,4 @@ const EXPERIENCE = [
         </li>
       ))
     }
-  </ol>
+</ol>
