--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -37,7 +37,7 @@ const PROJECTS = [
   {
     title: "Romero's Tires and Rims",
     description:
-      "A point of sale system developed in Visual Basic. It allows salespersons to manage customer profiles and export data to Excel. The system uses a Microsoft SQL Server database.",
+      "A customer relationship management system developed in Visual Basic. It allows salespersons to manage customer profiles and export data to Excel. The system uses a Microsoft SQL Server database.",
     github: "https://github.com/ORomero227/RomerosTiresAndRims",
     image: "/projects/romeros.webp",
     tags: [TAGS.MSSQL, TAGS.VBA],
@@ -53,7 +53,7 @@ const PROJECTS = [
   {
     title: "Real Estate Entry Genius",
     description:
-      "This project utilizes web scraping and automation to extract real estate listing information and automatically populate a Google Form with the collected data.",
+      "This project utilizes web scraping and automation to extract real estate listing information and automatically fill a Google Form with the collected data.",
     github: "https://github.com/ORomero227/Real-Estate-Entry-Genius",
     image: "/projects/realstate.webp",
     tags: [TAGS.Python],
