Change CV, hero info

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -14,9 +14,7 @@ import DownloadIcon from "./icons/DownloadIcon.astro";
   <h1 class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white">
     Hi, I'm Oscar Romero
   </h1>
-  <p class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 
-            [&>strong]:font-semibold dark:text-gray-300">
-        Software Developer from Puerto Rico, focused on building efficient and functional solutions, always prioritizing user experience and security.
+  <p class="mt-6 text-xl text-gray-800 dark:text-gray-300">Software Developer from Puerto Rico, dedicated to building efficient and functional solutions, always prioritizing user experience and security.          
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:oromero2812@outlook.com">
