Hero size changed:

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import ProfileCheck from '../components/icons/ProfileCheck.astro';
 	description="Software Developer from Puerto Rico, focused on building efficient and functional solutions, always prioritizing user experience and security."
 >
 	<main class="px-4">
-		<SectionContainer class="py-16 md:py-36">
+		<SectionContainer class="py-16 md:pt-36 pb-28">
 			<Hero />
 			<slot />
 		</SectionContainer>
