--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -4,7 +4,7 @@
       class="absolute inset-[-1000%] animate-[spin_2s_linear_infinite] bg-[conic-gradient(from_90deg_at_50%_50%,#51E4B8_0%,#21554E_50%,#51E4B8_100%)]"
     ></span>
     <div
-      class="px-3 py-1 text-sm text-green-800 bg-green-100 rounded-full dark:bg-gray-800 dark:text-white/80 backdrop-blur-3xl"
+      class="px-3 py-1 text-sm text-green-800 bg-green-100 rounded-full dark:bg-gray-900 dark:font-bold dark:text-white/80 backdrop-blur-3xl"
     >
       <slot />
     </div>
