New Style and Education Section added

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,14 +8,19 @@ const navItems = [
     url: "#top",
   },
   {
+    title: "Projects",
+    label: "projects",
+    url: "/#projects",
+  },
+  {
     title: "Experience",
     label: "experience",
     url: "/#experience",
   },
   {
-    title: "Projects",
-    label: "projects",
-    url: "/#projects",
+    title: "Education",
+    label: "education",
+    url: "/#education",
   },
   {
     title: "Contact",
