--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -37,10 +37,18 @@ const PROJECTS = [
   {
     title: "Romero's Tires and Rims",
     description:
-      "A point of sale system developed in Visual Basic. It allows salespersons to manage customer profiles and export data to Excel. The system uses a Microsoft SQL Server database.",
+      "A customer relationship management system developed in Visual Basic. It allows salespersons to manage customer profiles and export data to Excel. The system uses a Microsoft SQL Server database.",
     github: "https://github.com/ORomero227/RomerosTiresAndRims",
     image: "/projects/romeros.webp",
     tags: [TAGS.MSSQL, TAGS.VBA],
+  },
+  {
+    title: "RomeroBlog",
+    description:
+      "A simple blog application built with Flask. It allows users to register, log in, view and comment on blog posts, and for administrators, it provides the ability to add, edit, and delete posts.",
+    github: "https://github.com/ORomero227/RomeroBlog",
+    image: "/projects/RomeroBlogLogo.webp",
+    tags: [TAGS.Python, TAGS.Bootstrap],
   },
   {
     title: "Chill's Restaurant",
