--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,8 @@ import Projects from '../components/Projects.astro';
 import Hero from '../components/Hero.astro';
 import TitleSection from '../components/TitleSection.astro';
 import ProfileCheck from '../components/icons/ProfileCheck.astro';
+import Education from '../components/Education.astro';
+import EducationIcon from '../components/icons/EducationIcon.astro';
 ---
 
 <Layout 
@@ -31,9 +33,17 @@ import ProfileCheck from '../components/icons/ProfileCheck.astro';
 		<SectionContainer id="experience">
 			<TitleSection>
 				<ProfileCheck class="size-8"/>
-				Experience and Education
+				Experience
 			</TitleSection>
 			<Experience />
+		</SectionContainer>
+
+		<SectionContainer id="education">
+			<TitleSection>
+				<EducationIcon class="size-8"/>
+				Education
+			</TitleSection>
+			<Education />
 		</SectionContainer>
 	</div>
 	</main>
