--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ import GithubIcon from "./icons/GithubIcon.astro";
 import DownloadIcon from "./icons/DownloadIcon.astro";
 ---
 
-<div class="">
+<div class="max-w-2xl mt-6">
     <div class="mb-4">
         <Badge>Available to Work</Badge>
     </div>
@@ -15,7 +15,7 @@ import DownloadIcon from "./icons/DownloadIcon.astro";
     Hi, I'm Oscar Romero
   </h1>
   <p class="mt-6 text-xl text-gray-800 dark:text-gray-300">
-            Software Developer from Puerto Rico, dedicated to building efficient and functional solutions, always prioritizing user experience and security.
+    Software Developer from Puerto Rico, dedicated to building efficient, functional solutions with a strong focus on user experience and security.
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
     <SocialPill href="mailto:oromero2812@outlook.com">
