--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,9 +26,9 @@ const { title, description } = Astro.props;
   </head>
   <body class="relative text-black dark:text-white">
     <div
-      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-gray-950
+      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-neutral-950
       bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
-      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-10%,rgba(52,152,219,0.3),rgba(255,255,255,0))]"
+      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(130,130,133,0.4),rgba(255,255,255,0))]"
     >
     </div>
     <Header />
