--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,12 +24,11 @@ const { title, description } = Astro.props;
     <title>{title}</title>
     <ViewTransitions />
   </head>
-  <body class="relative text-black dark:text-white">
-    <div
-      class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-50 dark:bg-neutral-950
-      bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]
-      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(130,130,133,0.4),rgba(255,255,255,0))]"
-    >
+  <body class="text-black dark:text-white">
+    <div class="fixed left-0 top-0 -z-10 h-full w-full">
+      <div class="absolute top-0 z-[-2] h-screen w-screen bg-gray-50 dark:bg-neutral-950
+      bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))]  
+      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
     </div>
     <Header />
     <slot />
