Update folder structure

--- a/src/components/sections/Experience.astro
+++ b/src/components/sections/Experience.astro
@@ -1,5 +1,5 @@
 ---
-import ExperienceItem from "./ExperienceItem.astro"
+import ExperienceItem from "../sections-items/ExperienceItem.astro"
 
 const EXPERIENCE = [
     {
