--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,10 +1,10 @@
 ---
-import Badge from "../components/Badge.astro"
-import LinkedInIcon from './icons/LinkedInIcon.astro';
-import MailIcon from "./icons/MailIcon.astro"
-import SocialPill from "../components/SocialPill.astro"
-import GithubIcon from "./icons/GithubIcon.astro";
-import DownloadIcon from "./icons/DownloadIcon.astro";
+import Badge from "../../components/Badge.astro"
+import LinkedInIcon from '../icons/LinkedInIcon.astro';
+import MailIcon from "../icons/MailIcon.astro"
+import SocialPill from "../../components/SocialPill.astro"
+import GithubIcon from "../icons/GithubIcon.astro";
+import DownloadIcon from "../icons/DownloadIcon.astro";
 ---
 
 <div class="max-w-2xl mt-6">
