--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -1,10 +1,10 @@
 ---
-import DatabaseIcon from "./icons/Database.astro";
-import LinkButton from "./LinkButton.astro";
-import GithubIcon from "./icons/GithubIcon.astro";
-import CodeIcon from "./icons/CodeIcon.astro";
-import PythonIcon from "./icons/Python.astro";
-import BoostrapIcon from "./icons/BootstrapIcon.astro";
+import DatabaseIcon from "../icons/Database.astro";
+import LinkButton from "../buttons/LinkButton.astro";
+import GithubIcon from "../icons/GithubIcon.astro";
+import CodeIcon from "../icons/CodeIcon.astro";
+import PythonIcon from "../icons/Python.astro";
+import BoostrapIcon from "../icons/BootstrapIcon.astro";
 
 const TAGS = {
   MSSQL: {
