--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,8 @@
 // Supports weights 100-900
 import "@fontsource-variable/onest";
 
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import Header from "../components/sections/Header.astro";
+import Footer from "../components/sections/Footer.astro";
 import ViewTransitions from "astro/components/ViewTransitions.astro";
 interface Props {
   title: string;
