--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import SectionContainer from '../components/SectionContainer.astro';
-import Experience from '../components/Experience.astro';
+import Experience from '../components/sections/Experience.astro';
 import CodeIcon from '../components/icons/CodeIcon.astro';
-import Projects from '../components/Projects.astro';
-import Hero from '../components/Hero.astro';
-import TitleSection from '../components/TitleSection.astro';
+import Projects from '../components/sections/Projects.astro';
+import Hero from '../components/sections/Hero.astro';
+import TitleSection from '../components/sections/TitleSection.astro';
 import ProfileCheck from '../components/icons/ProfileCheck.astro';
-import Education from '../components/Education.astro';
 import EducationIcon from '../components/icons/EducationIcon.astro';
 ---
 
@@ -43,7 +42,6 @@ import EducationIcon from '../components/icons/EducationIcon.astro';
 				<EducationIcon class="size-8"/>
 				Education
 			</TitleSection>
-			<Education />
 		</SectionContainer>
 	</div>
 	</main>
