New style in education section

--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -37,7 +37,7 @@ const PROJECTS = [
   {
     title: "Romero's Tires and Rims",
     description:
-      "A customer relationship management system developed in Visual Basic. It allows salespersons to manage customer profiles and export data to Excel. The system uses a Microsoft SQL Server database.",
+      "A CRM built in Visual Basic for managing customer profiles, integrated with SQL Server.",
     github: "https://github.com/ORomero227/RomerosTiresAndRims",
     image: "/projects/romeros.webp",
     tags: [TAGS.MSSQL, TAGS.VBA],
@@ -45,7 +45,7 @@ const PROJECTS = [
   {
     title: "RomeroBlog",
     description:
-      "A simple blog application built with Flask. It allows users to register, log in, view and comment on blog posts, and for administrators, it provides the ability to add, edit, and delete posts.",
+      "A Flask blog with user registration, comments, and post management for admins.",
     github: "https://github.com/ORomero227/RomeroBlog",
     image: "/projects/RomeroBlogLogo.webp",
     tags: [TAGS.Python, TAGS.Bootstrap],
@@ -53,7 +53,7 @@ const PROJECTS = [
   {
     title: "Chill's Restaurant",
     description:
-      "A collaborative project to create an attractive and dynamic restaurant website, utilizing the ASP.NET framework and a Microsoft SQL Server database.",
+      "Dynamic restaurant website developed with ASP.NET and SQL Server.",
     github: "https://github.com/ORomero227/ChillsRestaurant",
     image: "/projects/chills.webp",
     tags: [TAGS.MSSQL, TAGS.ASP, TAGS.Bootstrap],
@@ -61,7 +61,7 @@ const PROJECTS = [
   {
     title: "Real Estate Entry Genius",
     description:
-      "This project utilizes web scraping and automation to extract real estate listing information and automatically fill a Google Form with the collected data.",
+      "Python automation for extracting real estate listings and auto-filling forms.",
     github: "https://github.com/ORomero227/Real-Estate-Entry-Genius",
     image: "/projects/realstate.webp",
     tags: [TAGS.Python],
