--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Hero from '../components/sections/Hero.astro';
 import TitleSection from '../components/sections/TitleSection.astro';
 import ProfileCheck from '../components/icons/ProfileCheck.astro';
 import EducationIcon from '../components/icons/EducationIcon.astro';
+import Education from '../components/sections/Education.astro';
 ---
 
 <Layout 
@@ -42,6 +43,7 @@ import EducationIcon from '../components/icons/EducationIcon.astro';
 				<EducationIcon class="size-8"/>
 				Education
 			</TitleSection>
+			<Education />
 		</SectionContainer>
 	</div>
 	</main>
